# sim2real-jaka

./: .gitignore  AGENTS.md  README.md  README_zh.md  install_teleop_conda.sh  pyproject.toml
GMR/general_motion_retargeting/: params.py
any4hdmi/: .gitignore  README.md  pyproject.toml
any4hdmi/docs/: dataset.md  dataset_format.md  pipeline.md
any4hdmi/src/any4hdmi/: __init__.py
any4hdmi/src/any4hdmi/core/: __init__.py  format.py  model.py
any4hdmi/src/any4hdmi/dataset/: __init__.py  base.py  fk_cache.py  full.py  interpolation.py  loaders.py  loading.py  windowed.py
any4hdmi/src/any4hdmi/fk/: __init__.py  runner.py
any4hdmi/src/any4hdmi/scripts/: __init__.py  filter.py  upload.py  viewer.py
any4hdmi/src/any4hdmi/scripts/preprocess/: __init__.py  axellwppr.py  lafan.py  sonic.py
any4hdmi/src/any4hdmi/utils/: __init__.py  dataset.py  math.py  mjcf.py
checkpoints/jaka/: latest35knew.yaml
checkpoints/jaka_mf_v1_dr/: latest56k_pico_dr.yaml
checkpoints/lafan-aa/: policy-ec592bb4_lafan_100style_student-5000.yaml
docs/: pico_to_g1.md  tracking_framework.md  xrobot_grpc_jetpack5.md
docs/tutorials/: motion-recording.md  offline-motion-tracking.md  pico-teleoperation.md
g1_xmls/: .gitattributes  g1-mode_13_15.urdf  g1-mode_13_15.xml  g1-mode_5_11.urdf  g1-mode_5_11.xml  g1.xml  g1_29dof_rubberhand-suitcase.xml
jaka_data/: deploy_mujoco_history_jakamini.py
jaka_data/Khan_mini_simplified/: Khan_mini_simplified.usd  Khan_mini_simplified_new_bigfeet.xml  khan.urdf
scratch/: server_low_level_jaka_sim.py  xrobot_teleop_to_robot_w_hand_record.py
scripts/: process_qpos_data.py  real_bridge.py  test_policy_inference.py
scripts/publishers/: joint_state_publisher.py
scripts/setup/: setup_xrobot_pybind.sh
sim2real-hdmi/: README.md  pyproject.toml
sim2real-hdmi/rl_policy/: base_policy.py
sim2real-hdmi/scripts/: process_qpos_data.py  real_bridge.py  test_onnx_inference.py
sim2real-hdmi/sim_env/: base_sim.py  hdmi.py
sim2real-hdmi/utils/: common.py  strings.py
sim2real/rl_policy/: base_policy.py  control_mode.py  tracking.py
(+143 files in other folders)
