[project]
name = "hdmi-sim2real"
version = "0.1.0"
description = "HDMI sim2real development"
readme = "README.md"
authors = [{ name = "HDMI Contributors" }]
requires-python = "==3.10.*"
dependencies = [
    "mujoco",
    "mjhub @ git+https://github.com/EGalahad/mjhub.git@main",
    "loguru",
    "pyyaml",
    "scipy",
    "torch",
    "onnxruntime",
    "onnx==1.17.0",
    "sshkeyboard",
    "pyzmq",
    "tqdm",
    "tyro",
    "unitree-sdk2py @ git+https://github.com/EGalahad/unitree_sdk2_python.git",
]

# [project.optional-dependencies]
# tensorrt = [
    # "tensorrt ; sys_platform == 'linux' and platform_machine == 'x86_64'",
# ]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sim2real*"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com/"
explicit = true

[tool.uv.sources]
tensorrt = { index = "nvidia-pypi" }
